feat: Added a toolbar to app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<mat-toolbar>
+  <button mat-icon-button class="button-icon" aria-label="Show menu options">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>DIO - SPA Angular</span>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
