--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
     <mat-cell *matCellDef="let element">
-      <button mat-icon-button>
+      <button mat-icon-button (click)="openEdit(element)">
         <mat-icon class="mat-18">edit</mat-icon>
       </button>
       <button mat-icon-button>
